--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/luke-hooper/React_Spotify_App/",
+  "homepage": "https://luke-hooper.github.io/React_Spotify_App/",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
